fix header z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     top: 0;
     right: 0;
     left: 0;
+    z-index: 99;
     height: var(--header-height);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
     display: flex;
